# fastroutes

./: README.MD  README.md  cli.py  client.py  pyproject.toml
fastroutes/: __init__.py  api.py  cli.py  client.py  helpers.py  route.py
