[tool.poetry]
name = "fastroutes"
version = "0.1.9"
description = "Generate HTTP clients from FastAPI apps"
authors = ["draew6"]
packages = [{ include = "fastroutes" }]
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "0.115.13"
pydantic = "2.11.7"
httpx = "0.28.1"
"typer[all]" = "0.16.0"

[tool.poetry.scripts]
fastroutes = "fastroutes.cli:generate_entry"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"